--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
+    "@types/react-native": "^0.72.8",
+    "deprecated-react-native-swipeable-listview": "^0.0.1",
     "expo": "~51.0.28",
+    "expo-camera": "~15.0.16",
+    "expo-crypto": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "expo-crypto": "~13.0.2",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
